--- a/notes.html
+++ b/notes.html
@@ -1,17 +1,26 @@
+<!-- notes.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Physics Notes - Cristian Villalobos</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Custom Stylesheet -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- Marked.js for Markdown Parsing -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- MathJax for LaTeX Rendering -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"
+        async></script>
 </head>
+
 <body>
+    <!-- Header Section -->
     <header class="bg-primary text-white py-3">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
@@ -20,8 +29,10 @@
                     <ul class="nav">
                         <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="curriculum.html">Curriculum</a></li>
+                        <li class="nav-item"><a class="nav-link text-white"
+                                href="index.html#publications">Publications</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="index.html#contact">Contact</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="notes.html">Notes</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#contact">Contact</a></li>
                     </ul>
                 </nav>
                 <button id="dark-mode-toggle" class="btn btn-outline-light"><i class="fas fa-moon"></i></button>
@@ -29,15 +40,20 @@
         </div>
     </header>
 
+    <!-- Main Content -->
     <main>
-        <section id="content" class="py-5">
+        <section id="notes" class="py-5">
             <div class="container">
                 <h2 class="text-center mb-4">Physics Notes</h2>
-                <div id="markdown-content"></div>
+                <div id="notes-content" class="border rounded p-4">
+                    <!-- Notes will be dynamically loaded here -->
+                    <p>Loading notes...</p>
+                </div>
             </div>
         </section>
     </main>
 
+    <!-- Footer Section -->
     <footer class="bg-secondary text-white text-center py-3">
         <div class="container">
             <p>&copy; <span id="current-year"></span> Cristian Villalobos</p>
@@ -53,7 +69,10 @@
         </div>
     </footer>
 
+    <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom Scripts -->
     <script src="scripts.js"></script>
 </body>
+
 </html>
