--- a/notes.html
+++ b/notes.html
@@ -24,27 +24,41 @@
     <header class="bg-primary text-white py-3">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
+                <!-- Logo or Name -->
                 <h1 class="h3 mb-0">Cristian Villalobos</h1>
+                <!-- Navigation Menu -->
                 <nav>
                     <ul class="nav">
                         <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="curriculum.html">Curriculum</a></li>
-                        <li class="nav-item"><a class="nav-link text-white"
-                                href="index.html#publications">Publications</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="index.html#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#publications">Publications</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#contact">Contact</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="notes.html">Notes</a></li>
                     </ul>
                 </nav>
-                <button id="dark-mode-toggle" class="btn btn-outline-light"><i class="fas fa-moon"></i></button>
+                <!-- Dark Mode Toggle Button -->
+                <button id="dark-mode-toggle" class="btn btn-outline-light" aria-label="Toggle Dark Mode">
+                    <i class="fas fa-moon"></i>
+                </button>
             </div>
         </div>
     </header>
 
     <!-- Main Content -->
     <main>
+        <!-- Notes Section -->
         <section id="notes" class="py-5">
             <div class="container">
                 <h2 class="text-center mb-4">Physics Notes</h2>
+                <!-- Note Navigation (Optional) -->
+                <!--
+                <div class="mb-4 text-center">
+                    <button class="btn btn-secondary me-2 note-btn" data-file="Resumen-Control-3.md">Resumen Control 3</button>
+                    <button class="btn btn-secondary me-2 note-btn" data-file="Another-Note.md">Another Note</button>
+                    <!-- Add more buttons as needed -->
+                <!-- </div>
+                -->
+                <!-- Notes Content -->
                 <div id="notes-content" class="border rounded p-4">
                     <!-- Notes will be dynamically loaded here -->
                     <p>Loading notes...</p>
@@ -68,6 +82,11 @@
             </nav>
         </div>
     </footer>
+
+    <!-- Back to Top Button -->
+    <button id="back-to-top" aria-label="Back to Top">
+        <i class="fas fa-chevron-up"></i>
+    </button>
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
